--- a/src/Game.form
+++ b/src/Game.form
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Game">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="185" y="20" width="394" height="400"/>
     </constraints>
     <properties>
-      <background color="-14906758"/>
+      <background color="-13959198"/>
     </properties>
     <border type="none"/>
     <children>
-      <component id="ad88b" class="javax.swing.JLabel" binding="label">
+      <component id="5e6f5" class="javax.swing.JButton" binding="button1" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="TECTTTTSDF"/>
+          <text value="Mine!"/>
         </properties>
       </component>
-      <vspacer id="cea81">
+      <component id="7897d" class="javax.swing.JButton" binding="button2" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-      </vspacer>
+        <properties>
+          <text value="Button"/>
+        </properties>
+      </component>
+      <component id="bed8d" class="javax.swing.JLabel" binding="cookieText">
+        <constraints>
+          <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Arial" size="18" style="0"/>
+          <foreground color="-16777216"/>
+          <text value="Subscribers: 0"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
