--- a/src/App.form
+++ b/src/App.form
@@ -7,6 +7,7 @@
     </constraints>
     <properties>
       <background color="-14906758"/>
+      <enabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
@@ -18,7 +19,8 @@
           </grid>
         </constraints>
         <properties>
-          <background color="-13959198"/>
+          <background color="-4536349"/>
+          <enabled value="true"/>
         </properties>
         <border type="none"/>
         <children>
@@ -53,6 +55,10 @@
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-13947600"/>
+              <enabled value="true"/>
+              <foreground color="-1"/>
+              <hideActionText value="false"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <text value="Button"/>
