--- a/src/App.form
+++ b/src/App.form
@@ -50,7 +50,7 @@
               <foreground color="-16777216"/>
             </properties>
           </component>
-          <component id="ed3fa" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="ed3fa" class="javax.swing.JButton" binding="submitButton" default-binding="true">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
