--- a/src/Game.form
+++ b/src/Game.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="5e6f5" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="5e6f5" class="javax.swing.JButton" binding="miningButton">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -36,7 +36,7 @@
           <text value="Hi Influencer"/>
         </properties>
       </component>
-      <component id="bed8d" class="javax.swing.JLabel" binding="cookieText">
+      <component id="bed8d" class="javax.swing.JLabel" binding="subscribersText">
         <constraints>
           <grid row="1" column="0" row-span="4" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
