--- a/src/Shop.form
+++ b/src/Shop.form
@@ -61,7 +61,7 @@
           <text value="Button"/>
         </properties>
       </component>
-      <component id="8c62e" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="8c62e" class="javax.swing.JButton" binding="submitButton" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
