--- a/src/Shop.form
+++ b/src/Shop.form
@@ -80,7 +80,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Add sub every 2 sec"/>
         </properties>
       </component>
       <component id="494d9" class="javax.swing.JButton" binding="mineButton6">
